Enable TWRP building

--- a/recovery/init.rc
+++ b/recovery/init.rc
@@ -5,6 +5,7 @@ on early-init
 
 on init
     export PATH /sbin
+    export LD_LIBRARY_PATH .:/sbin
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
@@ -56,7 +57,6 @@ service ueventd /sbin/ueventd
 service recovery /sbin/recovery
 
 service adbd /sbin/adbd recovery
-    disabled
 
 # Recovery will start adb once it has checked the keys
 
