--- a/init.p3.rc
+++ b/init.p3.rc
@@ -48,6 +48,7 @@ on post-fs-data
     mkdir /data/media 0775 media_rw media_rw
     chown media_rw media_rw /data/media
 
+
 # change back to bluetooth from system
     chown bluetooth net_bt_stack /data/misc/bluetooth
 
@@ -83,32 +84,28 @@ on post-fs-data
     mkdir /data/misc/wifi/sockets 0771 wifi wifi
     chmod 0664 /system/etc/wifi/wpa_supplicant.conf
     chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/misc/dhcpcd 0771 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcpcd
-    chown dhcp dhcp /data/misc/dhcp
-
-# Change Permission /data/app for booting time
+ 
+#Change Permission /data/app for booting time
     chmod 0771 /data/app
     chown system system /data/app
 
-# MHL
-    chown system radio /sys/devices/platform/acc_con/MHD_file
-
-# Hdcp
-    chown system system /dev/nvhdcp1
-    chmod 0660 /dev/nvhdcp1
-    chown system system /system/etc/hdmi/dectable.dat
-    chmod 0440 /system/etc/hdmi/dectable.dat
-    chown system system /system/etc/hdmi/dectable1.dat
-    chmod 0440 /system/etc/hdmi/dectable1.dat
-
-# SEC_MM_DRM
-  # Found in P4
-
-    # DRM directory creation
+#SISO-PLAYREADY-CHANGES
+#DRM directory creation
     mkdir /system/etc/security/.drm 0775
     chown root root /system/etc/security/.drm
     chmod 0775 /system/etc/security/.drm
+
+    # DivX DRM	
+    mkdir /efs/.files 0777
+    mkdir /efs/.files/.dx1 0777
+    mkdir /efs/.files/.dm33 0777
+    mkdir /efs/.files/.mp301 0777
+    chown media system /efs/.files/.dx1
+    chown media system /efs/.files/.dm33
+    chown media system /efs/.files/.mp301
+    chmod 0775 /efs/.files/.dx1
+    chmod 0775 /efs/.files/.dm33
+    chmod 0775 /efs/.files/.mp301
 
     # Added for Playready DRM Support
     mkdir /data/data/.drm 0775
@@ -118,38 +115,28 @@ on post-fs-data
     chown drm system /data/data/.drm/.playready
     chmod 0775 /data/data/.drm/.playready
 
-    # Added drm folder to copy drm plugins
+    #Added drm folder to copy drm plugins
     mkdir /system/lib/drm 0775
     chown root root /system/lib/drm
     chmod 0775 /system/lib/drm
+#SISO-PLAYREADY-CHANGES
 
-    # DivX DRM
-    mkdir /efs/.files 0775
-    mkdir /efs/.files/.dx1 0775
-    mkdir /efs/.files/.dm33 0775
-    mkdir /efs/.files/.mp301 0775
-    chown media system /efs/.files/.dx1
-    chown media system /efs/.files/.dm33
-    chown media system /efs/.files/.mp301
-    chmod 0775 /efs/.files/.dx1
-    chmod 0775 /efs/.files/.dm33
-    chmod 0775 /efs/.files/.mp301
+# create data/gps for GPS demon
+    mkdir /data/gps 700 gps system
+    chown gps system /data/gps
+    chown gps root /sys/class/sec/gps/pwr_en
+    chmod 664 /sys/class/sec/gps/nrst
 
 # create log system for radio
-    mkdir /data/log 0775 system log
-    chown system log /data/log
-    chmod 0775 /data/log
-    chmod 0775 /data/anr
-
-# HATP Result Dir
-    mkdir /data/misc/radio 0771 radio system
-
-# Set indication (checked by vold) that we have finished this action
+    mkdir /data/log 0777 root root 
+    chmod 0777 /data/log
+    
+    # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
 # change owner for writable sysfs files
-    chown system radio /sys/class/power_supply/battery/batt_reset_soc
-    chown system radio /sys/class/power_supply/battery/batt_reset_cap
+    chown system radio /sys/class/power_supply/battery/reset_soc
+    chown system radio /sys/class/power_supply/battery/reset_cap
     chown system radio /sys/class/power_supply/battery/fg_reg
     chown system radio /sys/class/power_supply/battery/charging_mode_booting
 
@@ -189,6 +176,23 @@ on boot
 # backlight
     chown system system /sys/class/backlight/pwm-backlight/brightness
 
+# CMC623
+    chown system radio /sys/class/mdnie/cmc623/mdnie_auto_ove
+    chown system radio /sys/class/mdnie/cmc623/mdnie_bg
+    chown system radio /sys/class/mdnie/cmc623/mdnie_cabc
+    chown system radio /sys/class/mdnie/cmc623/mdnie_ove
+    chown system radio /sys/class/mdnie/cmc623/mdnie_roi
+    chown system radio /sys/class/mdnie/cmc623/mdnie_scenario
+    chown system radio /sys/class/mdnie/cmc623/mdnie_temp
+    chown system radio /sys/class/mdnie/cmc623/lcd_power
+    chown system radio /sys/class/mdnie/cmc623/lcdtype
+
+# MHL
+    chown system radio /sys/devices/platform/acc_con/MHD_file
+
+# Camera
+    chown root camera /sys/class/sec/sec_imx073/camerafw
+
 # Sensor
     chmod 666 /dev/nvhost-ctrl
     chmod 666 /dev/nvhost-display
@@ -198,8 +202,6 @@ on boot
     chmod 666 /dev/nvhost-isp
     chmod 666 /dev/nvhost-mpe
     chmod 666 /dev/nvhost-vi
-    chmod 664 /sys/bus/iio/devices/device0/illuminance0_input
-    chmod 664 /sys/bus/iio/devices/device0/proximity_raw
 
 # sensor
     chown root system /dev/mpu
@@ -207,38 +209,46 @@ on boot
     chown root system /dev/accelirq
     chown root system /dev/timerirq
     chown root system /sys/class/proximity/proximity/proximity_avg
-    # For P3
-    chown root system /sys/class/sensors/accelerometer_sensor/p3_accel_cal
 
     chmod 0660 /dev/mpu
     chmod 0660 /dev/mpuirq
     chmod 0660 /dev/accelirq
     chmod 0660 /dev/timerirq
-    # For P3
-    chmod 0660 /sys/class/sensors/accelerometer_sensor/p3_accel_cal
 
     chmod 664 /sys/class/sensors/accelerometer_sensor/calibration
     chown system system /sys/class/sensors/accelerometer_sensor/calibration
-
+    
 # Vibetonz
     chmod 0660 /dev/tspdrv
-    chown root shell /dev/tspdrv
+    chown root shell /dev/tspdrv    
+    
+# to enable wifi
+     setprop wifi.interface "eth0"
+# end of wifi
 
-# CMC623
-    chown system media_rw /sys/class/mdnie/mdnie/mdnie_auto_ove
-    chown system media_rw /sys/class/mdnie/mdnie/mode
-    chown system media_rw /sys/class/mdnie/mdnie/cabc
-    chown system media_rw /sys/class/mdnie/mdnie/outdoor
-    chown system media_rw /sys/class/mdnie/mdnie/mdnie_roi
-    chown system media_rw /sys/class/mdnie/mdnie/scenario
-    chown system media_rw /sys/class/mdnie/mdnie/mdnie_temp
-    chown system media_rw /sys/class/mdnie/mdnie/lcd_power
-    chown system media_rw /sys/class/mdnie/mdnie/lcd_type
-
+# wlan permissions
+# to enable wifi
+#    setprop wifi.interface eth0
 # Power management settings
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
-    write /sys/module/cpuidle/parameters/lp2_in_idle 0
+
+# Set perms for interactive
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_rate
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/timer_rate
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/boost
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/input_boost
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/input_boost
 
 # Interactive (initial) setup
     write /sys/devices/system/cpu/cpufreq/interactive/boost_factor 2
@@ -246,22 +256,56 @@ on boot
     write /sys/devices/system/cpu/cpufreq/interactive/sustain_load 80
 
 # Enable KSM
-     write /sys/kernel/mm/ksm/sleep_millisecs 1400
-     write /sys/kernel/mm/ksm/pages_to_scan 200
-     write /sys/kernel/mm/ksm/run 1
+    write /sys/kernel/mm/ksm/sleep_millisecs 1400
+    write /sys/kernel/mm/ksm/pages_to_scan 200
+    write /sys/kernel/mm/ksm/run 1
+
+# HSIC control
+    chown radio system /sys/devices/platform/tegra-ehci.1/ehci_power
+
+# emmc checksum
+    chown system radio /sys/class/sec/sec_misc/emmc_checksum_done
+    chown system radio /sys/class/sec/sec_misc/emmc_checksum_pass
+
+# Get MAC address from efs for COB type
+    copy /efs/imei/.nvmac.info /data/.nvmac.info
+    chown system system /data/.nvmac.info
+    chmod 0400 /data/.nvmac.info
+
+# disable_vbus
+    chown system radio /sys/devices/platform/android_usb/disable_vbus		
+    chmod 0664 /sys/devices/platform/android_usb/disable_vbus	
+    
+# Keyboard dock
+    chown input input /sys/class/sec/keyboard/keyboard_led
+    chmod 0660 /sys/class/sec/keyboard/keyboard_led   
+
+# KBC
+    chown system radio /sys/devices/platform/tegra-kbc/matrixkey_pressed
+    chmod 0664 /sys/devices/platform/tegra-kbc/matrixkey_pressed 
+ 
+# GPIO_KEY
+    chown system radio /sys/devices/platform/gpio-keys.0/gpiokey_pressed
+    chmod 0664 /sys/devices/platform/gpio-keys.0/gpiokey_pressed
+
+# OTG Test
+    chown system radio /sys/class/host_notify/usb_otg/booster
+    chmod 0664 /sys/class/host_notify/usb_otg/booster
+	
+# MTP permission
+    chmod 0660 /dev/usb_mtp_gadget 
+    chown system system /dev/usb_mtp_gadget
 
 # DEBUG_LEVEL
     chown system radio /sys/devices/platform/sec_debug_level
     chmod 0664 /sys/devices/platform/sec_debug_level
     chown system radio /sys/devices/virtual/misc/level/control
-    chmod 0664 /sys/devices/virtual/misc/level/control
+    chmod 0664 /sys/devices/virtual/misc/level/control	
 
 # Camera
     chown system radio /sys/class/sec/sec_s5k5ccgx/cameraflash
     chown system radio /sys/class/sec/sec_s5k5ccgx/camtype
     chown system radio /sys/class/sec/sec_s5k5bbgx/camtype
-    # For P3
-    chown root camera /sys/class/sec/sec_imx073/camerafw
 
 # Change permissions on cameraflash so that we can use it with Torch
     chmod 0666 /sys/devices/virtual/sec/sec_s5k5ccgx/cameraflash
@@ -299,27 +343,27 @@ on property:my.gps=vzw
     chmod 0771 /data/gps
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+        -ieth0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
         -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
         -puse_p2p_group_interface=1 -O/data/misc/wifi/sockets -g@android:wpa_wlan0
     class main
-    socket wpa_wlan0 dgram 660 wifi wifi
+    socket wpa_eth0 dgram 660 wifi wifi
     disabled
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -O/data/misc/wifi/sockets \
-    -g@android:wpa_wlan0 -e/data/misc/wifi/entropy.bin
+    -Dnl80211 -ieth0 -c/data/misc/wifi/wpa_supplicant.conf -O/data/misc/wifi/sockets \
+    -g@android:wpa_eth0 -e/data/misc/wifi/entropy.bin
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
 #   user wifi
 #   group wifi inet keystore
     class main
-    socket wpa_wlan0 dgram 660 wifi wifi
+    socket wpa_eth0 dgram 0660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+service dhcpcd_eth0 /system/bin/dhcpcd -aABKL
     class main
     disabled
     oneshot
@@ -334,42 +378,25 @@ service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL -f/system/etc/dhcpcd/dhcpcd.conf
+service iprenew_eth0 /system/bin/dhcpcd -n
     class main
-    disabled
-    oneshot
-
-service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    disabled
-    oneshot
-
-service macloader /system/bin/macloader
     class main
+    disabled
     oneshot
 
-# end of wifi
+service iprenew_bnep0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
 
-# Start GPS daemon
-on property:my.gps=novzw
 service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     class main
     socket gps seqpacket 0660 gps system
     user gps
-    group system inet sdcard_rw
-
-on property:my.gps=vzw
-service gps-daemon /system/bin/gpsd
-    class main
-    socket gpsd stream 660 gps system
-    user system
     group system inet
 
 # virtual sdcard daemon running as media_rw (1023)
@@ -381,24 +408,18 @@ service fuse_usbdrive /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdrive 
     class late_start
     disabled
 
-# bugreport is triggered by the VOLUME-DOWN and VOLUME-UP keys
-service bugreport /system/bin/dumpstate -d -v -o /data/storage/bugreports/bugreport
-    class main
-    disabled
-    oneshot
-    keycodes 115 114
-
-# serial keyboard daemon
-#service sec_keyboard /system/bin/sec_keyboard /dev/ttyS0
-#    class late_start
-#    group system
-
 # For 3g tabs
 service cpboot-daemon /sbin/cbd -d -o t -p 7
     class main
     user root
     group radio cache inet misc audio sdcard_rw log
+    
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --no2bytes \
+    --use_baudrate_for_download --baudrate 3000000 --patchram /etc/firmware/bcm4330B1.hcd /dev/ttyHS2
+    class main
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
 
 service battery_charger /charger
     class charger
-
