--- a/ueventd.p3.rc
+++ b/ueventd.p3.rc
@@ -1,48 +1,34 @@
-/dev/knvmap	0660	system	system
-/dev/nvmap	0666	system	system
-/dev/tegra_avp	0660	media	media
-/dev/tegra_rpc	0660	media	media
-/dev/tegra_sema	0660	media	media
-/dev/tegra_mediaserver	0660	media	media
+/dev/knvmap             0660    system  system
+/dev/nvmap              0666    system  system
+/dev/tegra_avp          0660    media   media
+/dev/tegra_rpc          0660    media   media
+/dev/tegra_sema         0660    media   media
+/dev/tegra_mediaserver  0660    media   media
 /dev/s5k5ccgx           0660    media   camera
 /dev/s5k5bbgx           0660    media   camera
-# For P3
-/dev/imx073             0660    media   camera
-
-/dev/tegra_camera	0660	media	camera
-/dev/camera*	0660	media	camera
-/dev/focuser*	0660	media	camera
-/dev/torch*	0660	media	camera
-/dev/spdif*	0660	system	audio
-/dev/video0	0660	media	camera
-/dev/video1	0660	media	camera
-/dev/tegra_dc*	0660	system	system
-/dev/ttyACM*    0660    radio   system
-/dev/nvhdcp0    0666    system  system
-/dev/nvhdcp1    0666    system  system
+/dev/tegra_camera       0660    media   camera
+/dev/spdif*             0660    system  audio
+/dev/mpu                0660    system  system
+/dev/mpuirq             0660    system  system
+/dev/nvhdcp0            0660    media   media
+/dev/nvhdcp1            0660    media   media
+/dev/video0             0666    media   camera
+/dev/video1             0666    media   camera
+/dev/tf_driver          0666    system  system
+/dev/smdctl            0660        system        radio
+/dev/smddown           0660        system        radio
+/dev/smdipc            0660        system        radio
+/dev/smdrfs            0660        system        radio
 /dev/storage           0660        system        radio
 /dev/block/mmcblk0     0640        root          radio
-# For P4VZW
-/dev/block/mmcblk0p9     0660        root          radio
-/dev/lte_*      0660    system  radio
-/dev/cdma_*      0660    system  radio
-/dev/multipdp      0660    system  radio
-/dev/ttyGS1      0660    system  radio
-/dev/modem_br      0660    system  radio
 
-/dev/usb_mtp_gadget 0660	system	system
-
-# misc partition (P4VZW: changed to system:radio)
+# misc partition
 /dev/block/mmcblk0p6   0660        system        radio
-
-# modem interface
-/dev/umts*      0660    system  radio
-/dev/link_pm    0660    system  radio
-
 # modem partition
 /dev/block/mmcblk0p7   0660        system        radio
-# For P4VZW
-/dev/block/mmcblk0p4   0660        system        radio
+
+# for GPS
+/dev/ttyHS0            0600        gps           gps
 
 # for MPL
 /dev/mpu	0660	system	system
@@ -56,7 +42,7 @@
 /dev/usb/lp*           0660        system        usb
 
 # rfkill
-/dev/rfkill            0660    wifi    wifi
+/dev/rfkill     0660    wifi    wifi
 
 # Interactive
 /sys/devices/system/cpu/cpufreq interactive/above_hispeed_delay  0664  system  system
